Update image gallery with new pictures

--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
 <body>
     <header>
         <h1>DURBAN-SHOPPING-RUNNER</h1>
-        <p>Owned by Siiwe Zazi, Durban, KwaZulu‑Natal</p>
-        <p>Cell/WhatsApp: 0789409827</p>
+        <p>Siiwe Zazi, Durban, KwaZulu‑Natal</p>
+        <p>WhatsApp logo: 0789409827</p>
     </header>
     <section class="slogan">
-        <h2>Style, Speed & Durban Spirit</h2>
+        <h2>Run Your Fashion. Durban’s Finest Delivered on Time!</h2>
     </section>
     <section class="gallery">
-        <!-- 8 trending cloth images -->
-        <img src="images/img1.jpg" alt="Trending fashion 1">
-        <img src="images/img2.jpg" alt="Trending fashion 2">
-        <img src="images/img3.jpg" alt="Trending fashion 3">
-        <img src="images/img4.jpg" alt="Trending fashion 4">
-        <img src="images/img5.jpg" alt="Trending fashion 5">
-        <img src="images/img6.jpg" alt="Trending fashion 6">
-        <img src="images/img7.jpg" alt="Trending fashion 7">
-        <img src="images/img8.jpg" alt="Trending fashion 8">
+        <!-- trending fashion images -->
+        <img src="images/484119880_652229120858233_6992565809337470594_n.jpg">
+        <img src="images/484368512_652229094191569_179262735610344976_n.jpg">
+        <img src="images/484542741_652229127524899_7501744342055067549_n.jpg">
+        <img src="images/484869418_652228977524914_3820736805336921222_n.jpg">
+        <img src="images/487385172_3078299208984130_433581765893945612_n.jpg">
+        <img src="images/487432482_3078299095650808_4134083175436368058_n.jpg">
+        <img src="images/487454423_3078299345650783_1178793763131470634_n.jpg">
+        <img src="images/487454423_3078299345650783_1178793763131470634_n.jpg">
+        <img src="images/484588326_652228974191581_6009343009245766945_n.jpg">
+        <img src="images/487488011_3078299228984128_1125701455961312797_n.jpg">
+        <img src="images/487513113_3078299318984119_6738943218043124434_n.jpg">
+        <img src="images/487790418_3078299532317431_3659347619508898022_n.jpg">
+        <img src="images/487540863_3078299472317437_1776106461213623564_n.jpg">
+        <img src=images/487564309_3078299342317450_3065375590638193565_n.jpg">
     </section>
     <section class="products">
         <h3>Featured Styles & Prices (ZAR)</h3>
-        <ul>
-            <li>Bold print maxi dress – R799</li>
-            <li>Shweshwe wrap skirt – R499</li>
-            <li>Caftan flowy set – R899</li>
-            <li>Wide‑leg linen pants & top – R699</li>
-            <li>Statement tassel jacket – R1,199</li>
-        </ul>
+        <ul></ul>
     </section>
     <footer>
         <p>&copy; 2025 Durban‑Shopping‑Runner | All rights reserved.</p>
