Full website update: header, WhatsApp link, slogan, about section, images, footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         <h1>DURBAN-SHOPPING-RUNNER</h1>
         <p>Siiwe Zazi, Durban, KwaZulu‑Natal</p>
         <p>WhatsApp logo: 0789409827</p>
+
+        <a href="https://wa.me/2789409827" target="_blank">
+  <img src="images/whatsapp.png" alt="WhatsApp" class="social-icon">
+</a>
+
+<section class="about-section">
+  <h2>About Durban-Shopping-Runner</h2>
+  <p>Founded by Siiwe Zazi in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate KwaZulu-Natal style, hustle, and flair.</p>
+</section>
+
+
     </header>
     <section class="slogan">
         <h2>Run Your Fashion. Durban’s Finest Delivered on Time!</h2>
