Update gallery structure, images, and code

--- a/index.html
+++ b/index.html
@@ -2,51 +2,126 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Durban‑Shopping‑Runner</title>
+    <title>Durban Shopping Runner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>DURBAN-SHOPPING-RUNNER</h1>
-        <p>Siiwe Zazi, Durban, KwaZulu‑Natal</p>
-        <p>WhatsApp logo: 0789409827</p>
+        <h1>DURBAN-SHOPPING-RUNNER Siiwe</h1>
+        <p>Durban, KwaZulu‑Natal</p>
+        <p>WhatsApp: 0789409827</p>
 
         <a href="https://wa.me/2789409827" target="_blank">
-  <img src="images/whatsapp.png" alt="WhatsApp" class="social-icon">
+  <img src="icons8-whatsapp-48.png" alt="WhatsApp" class="social-icon">
 </a>
 
-<section class="about-section">
-  <h2>About Durban-Shopping-Runner</h2>
-  <p>Founded by Siiwe Zazi in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate KwaZulu-Natal style, hustle, and flair.</p>
-</section>
 
 
     </header>
     <section class="slogan">
         <h2>Run Your Fashion. Durban’s Finest Delivered on Time!</h2>
-    </section>
-    <section class="gallery">
-        <!-- trending fashion images -->
-        <img src="images/484119880_652229120858233_6992565809337470594_n.jpg">
-        <img src="images/484368512_652229094191569_179262735610344976_n.jpg">
-        <img src="images/484542741_652229127524899_7501744342055067549_n.jpg">
-        <img src="images/484869418_652228977524914_3820736805336921222_n.jpg">
-        <img src="images/487385172_3078299208984130_433581765893945612_n.jpg">
-        <img src="images/487432482_3078299095650808_4134083175436368058_n.jpg">
-        <img src="images/487454423_3078299345650783_1178793763131470634_n.jpg">
-        <img src="images/487454423_3078299345650783_1178793763131470634_n.jpg">
-        <img src="images/484588326_652228974191581_6009343009245766945_n.jpg">
-        <img src="images/487488011_3078299228984128_1125701455961312797_n.jpg">
-        <img src="images/487513113_3078299318984119_6738943218043124434_n.jpg">
-        <img src="images/487790418_3078299532317431_3659347619508898022_n.jpg">
-        <img src="images/487540863_3078299472317437_1776106461213623564_n.jpg">
-        <img src=images/487564309_3078299342317450_3065375590638193565_n.jpg">
+    
+         <section class="gallery-section">
+  <h2>Fashion Gallery</h2>
+
+  <div class="category">
+    <h3>Skirts</h3>
+    <div class="gallery">
+      <img src="images/skirts/529600140_1947378982681869_346182431285672339_n.jpg">
+      <img src="images/skirts/528191118_1947379012681866_6512978463714892048_n.jpg">
+      <img src="images/skirts/528331934_1947379089348525_5222969348043500657_n.jpg">
+      <img src="images/skirts/528353899_1947378979348536_5447818096640893382_n.jpg">
+      <img src="images/skirts/528403590_1947379052681862_1843407213218606028_n.jpg">
+      <img src="images/skirts/528153890_122144836844788631_6793012034402008706_n.jpg">
+      <img src="images/skirts/528235386_1947379139348520_7008639573713979021_n.jpg">
+      <img src="images/skirts/528563810_122144836958788631_8900053497263380_n.jpg">
+      <img src="images/skirts/528762885_122144836922788631_413662979204634116_n.jpg">
+
+    </div>
+  </div>
+
+  <div class="category">
+    <h3>Dresses</h3>
+    <div class="gallery">
+      <img src="images/Dresses/487643394_3078299368984114_2062483540670333293_n.jpg">
+      <img src="images/Dresses/484542741_652229127524899_7501744342055067549_n.jpg">
+    </div>
+  </div>
+
+  <div class="category">
+    <h3>Tops</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+
+     <div class="category">
+    <h3>Jackets</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg"> 
+
+      <div class="category">
+    <h3>Jeans</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+
+     <div class="category">
+    <h3>Bags</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg"> 
+
+      <div class="category">
+    <h3>Shoes</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+
+      <div class="category">
+    <h3>Sleepwear</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+
+      <div class="category">
+    <h3>Tracksuits</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+
+      <div class="category">
+    <h3>Shorts</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+
+     <div class="category">
+    <h3>Homeware</h3>
+    <div class="gallery">
+      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg"> 
+
+    </div>
+  </div>
+
+  <!-- Repeat the same for other categories -->
+</section>
+
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src=">
     </section>
     <section class="products">
         <h3>Featured Styles & Prices (ZAR)</h3>
         <ul></ul>
     </section>
     <footer>
+        <section class="about-section">
+  <h2>About Durban-Shopping-Runner</h2>
+  <p>Founded by Siiwe Zazi in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate South African Trending style, hustle, and flair.</p>
+</section>
         <p>&copy; 2025 Durban‑Shopping‑Runner | All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
