Update all edited files

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header>
-        <h1>DURBAN-SHOPPING-RUNNER Siiwe</h1>
+        <h1>YOUR DURBAN SHOPPING RUNNER__SIIWE</h1>
         <p>Durban, KwaZulu‑Natal</p>
-        <p>WhatsApp: 0789409827</p>
+        <p>CONTACT US ON WHATSAPP NOW!</p>
 
         <a href="https://wa.me/2789409827" target="_blank">
   <img src="icons8-whatsapp-48.png" alt="WhatsApp" class="social-icon">
@@ -56,42 +56,42 @@
      <div class="category">
     <h3>Jackets</h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg"> 
+      <img src="images/Jackets/514194076_122145009824762673_7690966441857725602_n.jpg"> 
+      <img src="images/Jackets/515440312_122145009830762673_2152623189189420765_n.jpg">
 
       <div class="category">
     <h3>Jeans</h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+      <img src="images/Jeans/514192176_122145010172762673_4309638855283098912_n.jpg">
+      <img src="images/Jeans/529333917_122131555226868621_8323006500213359055_n.jpg">
 
      <div class="category">
     <h3>Bags</h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg"> 
+      <img src="images/Bags/527906447_122123427518903567_7380032341113461922_n.jpg"> 
+        <img src="images/Bags/528547723_122123427776903567_4650185671237518111_n.jpg">
+        <img src="images/Bags/529098948_122123427752903567_6352964577915023514_n.jpg">
 
       <div class="category">
     <h3>Shoes</h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
-
-      <div class="category">
-    <h3>Sleepwear</h3>
-    <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+      <img src="images/Shoes/484368512_652229094191569_179262735610344976_n.jpg">
+        <img src="images/Shoes/527990713_1947380099348424_493655989814341774_n.jpg">
+        <img src="images/Shoes/528670122_122123403230903567_7952187555154249561_n.jpg">
+        <img src="images/Shoes/527225908_1947380252681742_3861013416195625007_n.jpg">
+        <img src="images/Shoes/484869418_652228977524914_3820736805336921222_n.jpg">
+        
 
       <div class="category">
     <h3>Tracksuits</h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
+      <img src="images/Tracksuits/484588326_652228974191581_6009343009245766945_n.jpg">
 
       <div class="category">
     <h3>Shorts</h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
-
-     <div class="category">
-    <h3>Homeware</h3>
-    <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg"> 
+        <img src="images/Shorts/528903332_122123441030903567_5266004680785135678_n.jpg">
+        <img src="images/Shorts/528691394_122123441036903567_1602786750503173808_n.jpg">
 
     </div>
   </div>
@@ -115,14 +115,14 @@
     </section>
     <section class="products">
         <h3>Featured Styles & Prices (ZAR)</h3>
-        <ul></ul>
+        <ul>Still to be updated!!!</ul>
     </section>
     <footer>
         <section class="about-section">
   <h2>About Durban-Shopping-Runner</h2>
-  <p>Founded by Siiwe Zazi in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate South African Trending style, hustle, and flair.</p>
+  <p>Founded by Siiwe Zazi located in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate South African Trending style, hustle, and flair.</p>
 </section>
-        <p>&copy; 2025 Durban‑Shopping‑Runner | All rights reserved.</p>
+        <p>&copy; 2025 Durban Shopping Runner__Siiwe| All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
