Update all gallery pages and index.html with working hyperlinks

--- a/index.html
+++ b/index.html
@@ -1,129 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Durban Shopping Runner</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Durban Shopping Runner</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .gallery { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; }
+    .gallery img { width: 200px; height: 260px; object-fit: cover; border-radius: 10px; }
+    .category { margin-bottom: 40px; text-align: center; }
+    .category h3 a { text-decoration: none; color: #ff1493; }
+    .social-icon { width: 40px; height: 40px; }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>YOUR DURBAN SHOPPING RUNNER__SIIWE</h1>
-        <p>Durban, KwaZulu‑Natal</p>
-        <p>CONTACT US ON WHATSAPP NOW!</p>
+  <header>
+  <h1>YOUR DURBAN SHOPPING RUNNER__SIIWE</h1>
+  <p>Durban, KwaZulu‑Natal</p>
+  <p>CONTACT US ON WHATSAPP NOW!</p>
+  <a href="https://wa.me/2789409827" target="_blank">
+    <img src="icons8-whatsapp-48.png" alt="WhatsApp" class="social-icon">
+  </a>
+  </header>
 
-        <a href="https://wa.me/2789409827" target="_blank">
-  <img src="icons8-whatsapp-48.png" alt="WhatsApp" class="social-icon">
-</a>
+  <section class="slogan">
+  <h2>Run Your Fashion. Durban’s Finest Delivered on Time!</h2>
+  </section>
 
-
-
-    </header>
-    <section class="slogan">
-        <h2>Run Your Fashion. Durban’s Finest Delivered on Time!</h2>
-    
-         <section class="gallery-section">
+  <section class="gallery-section">
   <h2>Fashion Gallery</h2>
 
+  <!-- Skirts -->
   <div class="category">
-    <h3>Skirts</h3>
+    <h3><a href="skirts/skirts.html">Skirts</a></h3>
     <div class="gallery">
-      <img src="images/skirts/529600140_1947378982681869_346182431285672339_n.jpg">
-      <img src="images/skirts/528191118_1947379012681866_6512978463714892048_n.jpg">
-      <img src="images/skirts/528331934_1947379089348525_5222969348043500657_n.jpg">
-      <img src="images/skirts/528353899_1947378979348536_5447818096640893382_n.jpg">
-      <img src="images/skirts/528403590_1947379052681862_1843407213218606028_n.jpg">
-      <img src="images/skirts/528153890_122144836844788631_6793012034402008706_n.jpg">
-      <img src="images/skirts/528235386_1947379139348520_7008639573713979021_n.jpg">
-      <img src="images/skirts/528563810_122144836958788631_8900053497263380_n.jpg">
-      <img src="images/skirts/528762885_122144836922788631_413662979204634116_n.jpg">
-
+    <img src="images/skirts/529600140_1947378982681869_346182431285672339_n.jpg" alt="">
+    <img src="images/skirts/528191118_1947379012681866_6512978463714892048_n.jpg" alt="">
     </div>
   </div>
 
+  <!-- Dresses -->
   <div class="category">
-    <h3>Dresses</h3>
+    <h3><a href="dresses/dresses.html">Dresses</a></h3>
     <div class="gallery">
-      <img src="images/Dresses/487643394_3078299368984114_2062483540670333293_n.jpg">
-      <img src="images/Dresses/484542741_652229127524899_7501744342055067549_n.jpg">
+    <img src="images/Dresses/487643394_3078299368984114_2062483540670333293_n.jpg" alt="">
+    <img src="images/Dresses/484542741_652229127524899_7501744342055067549_n.jpg" alt="">
     </div>
   </div>
 
+  <!-- Tops -->
   <div class="category">
-    <h3>Tops</h3>
+    <h3><a href="tops/tops.html">Tops</a></h3>
     <div class="gallery">
-      <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg">
-
-     <div class="category">
-    <h3>Jackets</h3>
-    <div class="gallery">
-      <img src="images/Jackets/514194076_122145009824762673_7690966441857725602_n.jpg"> 
-      <img src="images/Jackets/515440312_122145009830762673_2152623189189420765_n.jpg">
-
-      <div class="category">
-    <h3>Jeans</h3>
-    <div class="gallery">
-      <img src="images/Jeans/514192176_122145010172762673_4309638855283098912_n.jpg">
-      <img src="images/Jeans/529333917_122131555226868621_8323006500213359055_n.jpg">
-
-     <div class="category">
-    <h3>Bags</h3>
-    <div class="gallery">
-      <img src="images/Bags/527906447_122123427518903567_7380032341113461922_n.jpg"> 
-        <img src="images/Bags/528547723_122123427776903567_4650185671237518111_n.jpg">
-        <img src="images/Bags/529098948_122123427752903567_6352964577915023514_n.jpg">
-
-      <div class="category">
-    <h3>Shoes</h3>
-    <div class="gallery">
-      <img src="images/Shoes/484368512_652229094191569_179262735610344976_n.jpg">
-        <img src="images/Shoes/527990713_1947380099348424_493655989814341774_n.jpg">
-        <img src="images/Shoes/528670122_122123403230903567_7952187555154249561_n.jpg">
-        <img src="images/Shoes/527225908_1947380252681742_3861013416195625007_n.jpg">
-        <img src="images/Shoes/484869418_652228977524914_3820736805336921222_n.jpg">
-        
-
-      <div class="category">
-    <h3>Tracksuits</h3>
-    <div class="gallery">
-      <img src="images/Tracksuits/484588326_652228974191581_6009343009245766945_n.jpg">
-
-      <div class="category">
-    <h3>Shorts</h3>
-    <div class="gallery">
-        <img src="images/Shorts/528903332_122123441030903567_5266004680785135678_n.jpg">
-        <img src="images/Shorts/528691394_122123441036903567_1602786750503173808_n.jpg">
-
+    <img src="images/Tops/521976412_1258221112427659_4419633976019985346_n.jpg" alt="">
     </div>
   </div>
 
-  <!-- Repeat the same for other categories -->
-</section>
+  <!-- Jackets -->
+  <div class="category">
+    <h3><a href="jackets/jackets.html">Jackets</a></h3>
+    <div class="gallery">
+    <img src="images/Jackets/514194076_122145009824762673_7690966441857725602_n.jpg" alt="">
+    <img src="images/Jackets/515440312_122145009830762673_2152623189189420765_n.jpg" alt="">
+    </div>
+  </div>
 
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src=">
-    </section>
-    <section class="products">
-        <h3>Featured Styles & Prices (ZAR)</h3>
-        <ul>Still to be updated!!!</ul>
-    </section>
-    <footer>
-        <section class="about-section">
-  <h2>About Durban-Shopping-Runner</h2>
-  <p>Founded by Siiwe Zazi located in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate South African Trending style, hustle, and flair.</p>
-</section>
-        <p>&copy; 2025 Durban Shopping Runner__Siiwe| All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
+  <!-- Jeans -->
+  <div class="category">
+    <h3><a href="jeans/jeans.html">Jeans</a></h3>
+    <div class="gallery">
+    <img src="images/Jeans/514192176_122145010172762673_4309638855283098912_n.jpg" alt="">
+    <img src="images/Jeans/529333917_122131555226868621_8323006500213359055_n.jpg" alt="">
+    </div>
+  </div>
+
+  <!-- Bags -->
+  <div class="category">
+    <h3><a href="bags/bags.html">Bags</a></h3>
+    <div class="gallery">
+    <img src="images/Bags/527906447_122123427518903567_7380032341113461922_n.jpg" alt="">
+    <img src="images/Bags/528547723_122123427776903567_4650185671237518111_n.jpg" alt="">
+    </div>
+  </div>
+
+  <!-- Shoes -->
+  <div class="category">
+    <h3><a href="shoes/shoes.html">Shoes</a></h3>
+    <div class="gallery">
+    <img src="images/Shoes/484368512_652229094191569_179262735610344976_n.jpg" alt="">
+    <img src="images/Shoes/527990713_1947380099348424_493655989814341774_n.jpg" alt="">
+    </div>
+  </div>
+
+  <!-- Tracksuits -->
+  <div class="category">
+    <h3><a href="tracksuits/tracksuits.html">Tracksuits</a></h3>
+    <div class="gallery">
+    <img src="images/Tracksuits/484588326_652228974191581_6009343009245766945_n.jpg" alt="">
+    </div>
+  </div>
+
+  <!-- Shorts -->
+  <div class="category">
+    <h3><a href="shorts/shorts.html">Shorts</a></h3>
+    <div class="gallery">
+    <img src="images/Shorts/528903332_122123441030903567_5266004680785135678_n.jpg" alt="">
+    <img src="images/Shorts/528691394_122123441036903567_1602786750503173808_n.jpg" alt="">
+    </div>
+  </div>
+  </section>
+
+  <section class="products">
+  <h3>Featured Styles & Prices (ZAR)</h3>
+  <ul>
+    <li>Still to be updated!!!</li>
+  </ul>
+  </section>
+
+  <footer>
+  <section class="about-section">
+    <h2>About Durban-Shopping-Runner</h2>
+    <p>Founded by Siiwe Zazi located in Durban, we connect fashion lovers with trending clothing from local markets and city boutiques. Durban-Shopping-Runner is your personal shopper, delivering quality style, fast and reliably. We celebrate South African Trending style, hustle, and flair.</p>
+  </section>
+  <p>&copy; 2025 Durban Shopping Runner__Siiwe | All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
